--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header class="header">
         <section class="flex">
+            <div id="menu-btn" class="fa-solid fa-bars"></div>
             <a href="index.html" class="logo"><i class="fa-solid fa-briefcase"></i></i>JobHunt.</a>
             <nav class="navbar">
                 <a href="index.html">home</a>
@@ -253,5 +254,6 @@
         </section>
     </footer>
     <div class="credit">&copy; copyright @2023 by <span> Tran Tien Phuc</span> all rights reserved!</div>
+    <script src="Js.js"></script>
 </body>
 </html>
